# SEO-TITLE-GEN

./: .env.example  .gitignore  .replit  AGENTS.md  CONTENT_RESEARCH_WORKFLOW.md  PROGRESS.md  README.md  ai_handler.py  app.py  casino_review_sites.txt  competitive_analyzer.py  config.yaml  database.db  database.py  dataforseo_api.py  dataforseo_simple.py  dfs_serp_fetcher.js  dfs_serp_fetcher.py  google_search.py  instructions.txt  live_regular.md  llms.txt  patterns.py  pyproject.toml  replit.md  requirements.txt  scraper.py  sites_for_500casino.txt  support_brief.md  utils.py
.claude/: settings.local.json
.streamlit/: config.toml
assets/data/: app.sqlite
assets/samples/: serp_038ed4504937e6dcdd4adc42c535401ef03ac9be_limit100.json  serp_0436f3ca4631e66f3e89e1a3c5b84c0879748318_limit100.json  serp_0595ad68467afa5d46e7313747b450c49dfad48e_limit100.json  serp_062b54dea928a36e1fecd4f1ebefdc1f6ff015d7_limit100.json  serp_0868bfa4cc26ddde9ec93618257045f093409a58_limit100.json  serp_08868949065b258422add81828c6e5fde587714a_limit100.json  serp_097afbf59c4584644c69479d40f66d68cbbff80b_limit25.json  serp_0bc9669b1a8439284b6e1e984a30d5e41a5cf803_limit100.json  serp_0bf74d997888b37d9abc3b8e1190e67de943674c_limit100.json  serp_0c09f7b06d0a0b7aa8166a3be0995d79dd67ffdd_limit100.json  (+218 more)
attached_assets/: Pasted--Complete-Prompt-for-Replit-SEO-Title-Generator-Standalone-Application-Project-Name-SEO-Tit-1758026994985_1758026994990.txt
exports/: .gitkeep
streamlit_app/: README.md  __init__.py  app.py  db.py  openai_writer.py  prompt_manager.py  utils.py
venv_linux/: pyvenv.cfg
