[project]
name = "repl-nix-workspace"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.11"
dependencies = [
    "anthropic>=0.67.0",
    "beautifulsoup4>=4.13.5",
    "nltk>=3.9.1",
    "openai>=1.107.3",
    "pandas>=2.3.2",
    "plotly>=6.3.0",
    "pyyaml>=6.0.2",
    "requests>=2.32.5",
    "streamlit>=1.49.1",
    "trafilatura>=2.0.0",
]
